--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /files/*
 /cache
 
+# Ignore local settings.
+/settings.local.php
+
 # ** Only works in OSs that support newer versions of fnmatch (Bash 4+)
 /sites/default/**/files
 /sites/default/**/private
